# alnviz

./: .gitignore  ALNview  Cargo.toml  DESIGN.md  KNOWN_ISSUES.md  PLAN.md  README-RUST.md  README.md  SESSION_SUMMARY.md  WEEK1-COMPLETE.md  build.rs  sticks.c  test.1aln  test_load.sh  x.1aln
.github/workflows/: rust.yml
examples/: debug_x.rs  list_seqs.rs  test_x.rs  verify_reverse.rs
src/: aln_reader.rs  ffi.rs  lib.rs  main.rs  rust_plot.rs  sequence_filter.rs
tests/: golden_tests.rs
