[package]
name = "alnview"
version = "0.1.0"
edition = "2021"
authors = ["Erik Garrison"]
description = "Fast, interactive alignment viewer for pangenome analysis (built on Gene Myers' ALNVIEW design)"
repository = "https://github.com/pangenome/alnviz"
license = "MIT"
keywords = ["genomics", "alignment", "visualization", "pangenome"]
categories = ["science", "visualization"]

[dependencies]
eframe = "0.28"
egui = "0.28"
rfd = "0.14"  # Native file dialogs
env_logger = "0.11"  # Logging
libc = "0.2"  # For FFI memory management
rstar = "0.12"  # R*-tree for spatial indexing of alignment segments (better than quad-tree for range queries)
fastga-rs = { git = "https://github.com/pangenome/fastga-rs.git", rev = "db602e0" }  # For reading .1aln files (includes GDB preservation fix)
clap = { version = "4.5", features = ["derive"] }  # CLI argument parsing
anyhow = "1.0"  # Error handling
image = "0.25"  # For rendering to PNG files
imageproc = "0.25"  # For drawing text and shapes on images
ab_glyph = "0.2"  # TrueType font rendering (compatible with imageproc)

[dev-dependencies]
sha2 = "0.10"  # For golden file checksums in tests

[profile.dev]
opt-level = 1  # Slightly faster debug builds

[profile.release]
lto = true
codegen-units = 1
strip = true
